--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: cornsilk;">
     <h1 style="color: brown;">Some Photos that I clicked</h1>
-    <img src="./Images/21.JPG" alt="A picture of a girl" width="500"> 20 
+    <img src="./Images/21.JPG" alt="A picture of a girl" width="500">
     <img src="./Images/20.JPG" alt="Rhinoceras" width="500"> 
     <img src="./Images/2.JPG" alt="A picture of a dog" width="450" height="330">
     <img src="./Images/11.JPG" alt="A picture of a tree" width="500" height="330">
